1998-08-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile (SWARMHOME): Default to 1998-08-17.
	Include Makefile.appl from $(SWARMHOME)/etc/swarm.

1998-04-22  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* DiGraphLink.m ([DiGraphLink -createEnd]): Reformatting.
	([DiGraphLink update]): Don't update unless there is a linkItem.
	([DiGraphLink hideLink]): Don't drop unless there is a linkItem.

	* DiGraph.m ([DiGraph +createBegin:]): Create nodeList here, not
	in createEnd (removed).

	* DiGraph.h: Don't declare createEnd.

	* DiGraph.h, DiGraphNode.h: Include objectbase/SwarmObject.h
	instead of objectbase.h.  

1998-02-26  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* DiGraphNode.m: Don't include string.h, stdio.h, stdlib.h,
	gui.h, objc-api.h, and simtools.h. Include simtoolsgui.h and random.h.
	Reformatting throughout.

	* DiGraph.m: Don't include simtools.h, string.h, stdio.h, or
	stdlib.h.  Include random.h
	([DiGraph -redistribute]): Use 2.0 * M_PI instead of constant.
	Minor reformatting.

1998-02-25  Alex Lancaster  <alex@santafe.edu>

	* DiGraph.m (#import): Replaced separate imports of header files
	 with <graph.h>

	* graph.h (DEFAULT_RANDOM_SEED): Added to make global for entire
	library.

	* DiGraphNode.[hm] ([DiGraphNode -setCanvas:withRandPosFunc:]):
	Added to allow placement of nodes on canvas with a specific random
	number generator, to make placement of nodes reliable if the graph
	is hidden or re-displayed.

	* DiGraphNode.m ([DiGraphNode -setCanvas:]): is now a wrapper for this
	new method which is called with the current random number
	distribution. If no distribution is specified, then it defaults to
	the simtools RNG. Use of this method is DEPRECATED.

	* DiGraphNode.[hm] ([DiGraphNode -setRandPosFunc:]): added to allow
	independent setting of position random number distribution. Sets
	the new instance variable.

	* DiGraph.[hm] ([DiGraph -setCanvas: withRandPosSeed:]) Added to